k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wentframework
  labels:
    name: wentframework
    app: wentframework
