k8s/wentframework-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wentframework-service
  namespace: wentframework
  labels:
    app: wentframework
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: wentframework
